<resources>
    <string name="app_name">SGit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">欢迎使用!</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">密码必须大于5个字</string>
    <string name="login_failed">登陆失败</string>
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败</string>
    <string name="search">搜索</string>
    <string name="search_input_hint">搜索仓库/用户</string>


</resources>