<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.slin.git.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/search"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@id/login"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.slin.git.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.slin.git.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/login"
        android:name="com.slin.git.ui.login.view.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/search"
        android:name="com.slin.git.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment">
        <argument
            android:name="keywords"
            android:defaultValue=""
            app:argType="string" />

    </fragment>

</navigation>
